# repo-link

./: Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
crates/app-cli/: Cargo.toml
crates/app-cli/src/: cli.rs  dispatch.rs  lib.rs  render.rs  services.rs
crates/app-cli/src/commands/: agents.rs  gh.rs  mod.rs  project.rs  query.rs  repo.rs  sync.rs  task.rs  workspace.rs
crates/app-cli/src/daemon/: launcher.rs  linux.rs  macos.rs  manifest.rs  mod.rs
crates/app-cli/src/daemon/templates/: launchd.plist  systemd.service
crates/app-cli/src/docs/: agents_intro.md  mod.rs
crates/app-cli/tests/: cli.rs
crates/app-daemon/: Cargo.toml
crates/app-daemon/src/: cli.rs  daemon.rs  error.rs  lib.rs  logging.rs  main.rs  report.rs
crates/application-project/: Cargo.toml
crates/application-project/src/: dto.rs  error.rs  lib.rs  service.rs  status.rs
crates/application-query/: Cargo.toml
crates/application-query/src/: dto.rs  error.rs  lib.rs  service.rs
crates/application-sync/: Cargo.toml
crates/application-sync/src/: drainer.rs  enqueue.rs  error.rs  lib.rs  poller.rs  service.rs  summary.rs
crates/application-task/: Cargo.toml
crates/application-task/src/: dto.rs  error.rs  lib.rs  service.rs
crates/application-workspace/: Cargo.toml
crates/application-workspace/src/: error.rs  lib.rs  mapping.rs  repo_binding_service.rs  workspace_service.rs
crates/domain-core/: Cargo.toml
crates/domain-core/src/: aggregate.rs  error.rs  id.rs  lib.rs  time.rs
crates/domain-project/: Cargo.toml
crates/domain-project/src/: lib.rs  mapping.rs  project.rs  status.rs
crates/domain-repo/: Cargo.toml
crates/domain-repo/src/: binding.rs  instance.rs  lib.rs  link.rs  naming.rs  origin.rs  view.rs
crates/domain-sync/: Cargo.toml
crates/domain-sync/src/: filing.rs  lib.rs  outbox.rs  policy.rs
crates/domain-task/: Cargo.toml
crates/domain-task/src/: enums.rs  hash.rs  lib.rs  relation.rs  snapshot.rs  task.rs
crates/domain-workspace/: Cargo.toml
crates/domain-workspace/src/: lib.rs  name.rs  status.rs  workspace.rs
crates/dto-events/: Cargo.toml
crates/dto-events/src/: event.rs  lib.rs  payload.rs
crates/dto-shared/: Cargo.toml
crates/dto-shared/src/: lib.rs  project.rs  repo.rs  sync.rs  task.rs  workspace.rs
crates/infra-config/: Cargo.toml
crates/infra-config/src/: config.rs  error.rs  lib.rs  paths.rs  token_file.rs
crates/infra-filesystem/: Cargo.toml
crates/infra-filesystem/src/: discover.rs  error.rs  lib.rs  probe.rs  watcher.rs
crates/infra-git/: Cargo.toml
crates/infra-git/src/: discover.rs  error.rs  lib.rs  url.rs
crates/infra-github/: Cargo.toml
crates/infra-github/src/: graphql.rs  graphql_tests.rs  lib.rs  provider.rs  rest.rs  tests.rs
crates/infra-sqlite/: Cargo.toml
crates/infra-sqlite/migrations/: 20260520000001_initial.sql  20260521000001_add_check_constraints_and_fk.sql  20260521000002_repo_names_and_aliases.sql  20260526000001_snapshot_source_add_created.sql  20260526000002_friendly_ids.sql  20260527000001_repo_scope_remote_mappings.sql  20260527000002_task_comments.sql  20260528000001_snapshot_source_add_link.sql  20260528000002_snapshot_add_repo_id.sql  20260528000003_project_sync.sql  20260528000004_project_status_mappings.sql  20260529000001_drop_depends_on_relation.sql  20260529000002_outbox_retry_backoff.sql  20260529000003_outbox_inflight_index.sql  20260529000004_task_project_status_cache.sql  20260530000001_add_filing_repo_id.sql  20260531000001_snapshot_add_filing_repo_id.sql  20260601000001_remote_mappings_rekey_filing.sql  20260609000001_snapshot_source_add_filing_repo_repair.sql  20260622000001_task_lifecycle_and_synced_at.sql  20260622000002_project_status_mappings_is_open.sql  20260625000001_task_poll_index.sql  20260629000001_shared_repo_identity.sql
crates/infra-sqlite/src/: event_sink.rs  lib.rs  mapping.rs  migrate.rs  outbox_repo.rs  pool.rs  project_repo.rs  repo_binding_repo.rs  task_repo.rs  task_snapshot_repo.rs  workspace_repo.rs
crates/infra-sqlite/tests/: integration.rs
crates/ports/: Cargo.toml
crates/ports/src/: clock.rs  error.rs  event_sink.rs  filesystem.rs  lib.rs  outbox.rs  project.rs  remote_task.rs  task.rs
crates/testing-fixtures/: Cargo.toml
crates/testing-fixtures/src/: clock.rs  event_sink.rs  filesystem_probe.rs  lib.rs  outbox_repo.rs  project_repo.rs  remote_project_provider.rs  remote_task_provider.rs  repo_binding_repo.rs  task_repo.rs  task_snapshot_repo.rs  workspace_repo.rs
crates/testing-integration/: Cargo.toml
crates/testing-integration/src/: lib.rs
docs/: migrations.md
docs/rfcs/: 0001-project-sync.md  0002-task-repo-axes.md  0003-field-level-diff-push.md  0004-status-and-cache-redesign.md  0005-shared-repo-identity.md
