[package]
name = "app-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
application-workspace = { workspace = true }
application-task = { workspace = true }
application-query = { workspace = true }
application-sync = { workspace = true }
application-project = { workspace = true }
infra-github = { workspace = true }
dto-shared = { workspace = true }
domain-task = { workspace = true }
domain-core = { workspace = true }
domain-sync = { workspace = true }
ports = { workspace = true }
infra-sqlite = { workspace = true }
infra-filesystem = { workspace = true }
infra-git = { workspace = true }
infra-config = { workspace = true }
clap = { workspace = true, features = ["env"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
directories = { workspace = true }
rpassword = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
# `rl project link` fetches a project schema over GraphQL; the CLI tests
# point `REPO_LINK_GITHUB_API_BASE_URL` at a wiremock server to exercise the
# online link path without touching api.github.com.
wiremock = { workspace = true }

# `src/bin/repo-link.rs` and `src/bin/rl.rs` are auto-discovered.
# Both are thin shims around `app_cli::run()` in `src/lib.rs`.
