[package]
name = "application-project"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
domain-core = { workspace = true }
domain-project = { workspace = true }
domain-task = { workspace = true }
ports = { workspace = true }
dto-shared = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
testing-fixtures = { workspace = true }
tokio = { workspace = true }
pretty_assertions = { workspace = true }
