[package]
name = "infra-filesystem"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
ports = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
notify = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
