[package]
name = "infra-github"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
domain-core = { workspace = true }
domain-task = { workspace = true }
ports = { workspace = true }
dto-shared = { workspace = true }
octocrab = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true }
