[package]
name = "infra-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
domain-core = { workspace = true }
domain-workspace = { workspace = true }
domain-repo = { workspace = true }
domain-task = { workspace = true }
domain-sync = { workspace = true }
domain-project = { workspace = true }
ports = { workspace = true }
dto-events = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
