[package]
name = "testing-fixtures"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
domain-core = { workspace = true }
domain-workspace = { workspace = true }
domain-repo = { workspace = true }
domain-task = { workspace = true }
domain-sync = { workspace = true }
domain-project = { workspace = true }
ports = { workspace = true }
dto-shared = { workspace = true }
dto-events = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
