[package]
name = "testing-integration"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dev-dependencies]
infra-sqlite = { workspace = true }
infra-github = { workspace = true }
infra-git = { workspace = true }
application-workspace = { workspace = true }
application-task = { workspace = true }
application-sync = { workspace = true }
application-query = { workspace = true }
testing-fixtures = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }
rstest = { workspace = true }
pretty_assertions = { workspace = true }
wiremock = { workspace = true }
